Update to spring3, java17, remove guava etc